<resources>
    <string name="app_name">GoogleMeetScheduler</string>
    <string name="memo">MEMO</string>
    <string name="name">Subject</string>
    <string name="alarm">Alarm</string>
    <string name="code">Code</string>
    <string name="time">When</string>
    <string name="day_of_week">Day of week</string>
    <string name="update">UPDATE</string>
    <string name="content">Content</string>
    <string name="exampleCode">bee-cute-bee</string>
    <string name="_06_00">06:00</string>
    <string name="add_reviews">Add reviews</string>
    <string name="react_class">React class</string>
    <string name="add">Add</string>
    <string name="day">Day</string>
    <string name="before">Before</string>
    <string name="questionMark">\" \?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="this_item_will_be_deleted_immediately_you_can_t_undo_this_action">This item will be deleted immediately. You can\'t undo this action.</string>
    <string name="meet_google_com">meet.google.com/</string>
    <string name="enter_your_subject_name">Enter your subject name</string>
    <string name="enter_your_meet_code">Enter your meet code</string>
    <string name="x">X</string>
    <string name="admob_app_id">ca-app-pub-5834098579993647~4105765690</string>
    <string name="banner_ad_unit_id">ca-app-pub-5834098579993647/7087152251</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
</resources>