<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f1f3f5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_container"
        android:elevation="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:textColor="@color/darkyButNotDark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="#EAECF3"
                android:textColorHint="@color/grayButNotGray"
                android:layout_weight="1"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_subject_name"
                    android:textSize="14sp"
                    android:textColor="@color/darkyButNotDark"
                    android:textColorHint="@color/grayButNotGray"
                    android:id="@+id/editName" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:textColor="@color/darkyButNotDark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/code" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_meet_code"
                app:hintTextColor="#EAECF3"
                android:textColorHint="@color/grayButNotGray"
                android:layout_weight="1"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="12"
                    android:textSize="14sp"
                    android:textColor="@color/darkyButNotDark"
                    android:textColorHint="@color/grayButNotGray"
                    android:id="@+id/editCode" />

            </com.google.android.material.textfield.TextInputLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/darkyButNotDark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/time" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintTextColor="#EAECF3"
                android:textColorHint="@color/grayButNotGray"
                app:errorEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/darkyButNotDark"
                android:textColorHint="@color/grayButNotGray"
                android:focusable="false"
                android:hint="@string/_06_00"
                android:id="@+id/editTime"
                android:autofillHints="@string/_06_00"
                android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkyButNotDark"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:text="@string/day" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="#f1f3f5"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:id="@+id/daySpin" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkyButNotDark"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:text="@string/before" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="#f1f3f5"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:id="@+id/alarmSpin" />

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/addSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_box_blue"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>
